Controller handling (#5)
* new error response

* controller errors

* controller and service handling
